# NNUE

./: .gitignore  CMakeLists.txt  Colab_Training.ipynb  Colab_Training_v2.ipynb  NNUE_Development_Roadmap.md  README.md  build.bat  gdb_script.txt  input.txt  requirements.txt  test_crash.cpp
gui/: package-lock.json  package.json  server.js
gui/public/: app.js  index.html  style.css
model/: export.py  network.py  nnue_model.pt  train.py
src/: bitboard.cpp  bitboard.h  evaluate.cpp  main.cpp  move.h  movegen.cpp  movegen.h  nnue.cpp  nnue.h  position.cpp  position.h  san.cpp  san.h  search.cpp  search.h  syzygy.cpp  syzygy.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
